# where-it-went

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml  env.example  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
docker/dynamodb/: shared-local-instance.db
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  env.example  vite-env.d.ts
frontend/src/components/: ChartSelector.tsx  DataTable.tsx  SpendingReport.css  SpendingReport.tsx  SummaryPanel.tsx  basic_map.tsx  mockdata.json  sample_spending_respone.json
frontend/src/components/home_component/: Home.css  Home.tsx
frontend/src/components/map_component/: ErrorBanner.tsx  LoadingIndicator.tsx  MapComponent.css  MapComponent.tsx  MapControls.tsx  SearchBar.tsx
frontend/src/services/: socket.ts
frontend/src/types/: place.ts  spending.ts
src/where_it_went/: __main__.py  app.py  config.py  dynamodb_setup.py  routes.py  socket_setup.py
src/where_it_went/service/: open_ai.py  redis_caching.py  redis_setup.py  report_service.py  search_nearby.py  usa_spending_service.py
src/where_it_went/service/search_places/: api.py  (+2 more)
src/where_it_went/utils/: __init__.py  clean_text.py  decoding.py  general.py  http.py  listutils.py  result.py
test/: app_test.py  main_test.py
test/service/: search_nearby_test.py  test_redis_caching.py  test_usa_spending.py  usa_spending_test.py
(+6 files in other folders)
