[project]
name = "where_it_went"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.59",
    "boto3-stubs[dynamodb]>=1.40.59",
    "eventlet>=0.40.3",
    "fakeredis[lua]>=2.32.0",
    "flask>=3.1.2",
    "google-generativeai>=0.3.0",
    "flask-socketio>=5.4.1",
    "openai>=2.6.1",
    "pydantic>=2.11.9",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "s2cell>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
where-it-went = "where_it_went.__main__:main"

[tool.ruff]
indent-width = 2
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "TID252"]
extend-select = ["I"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "fakeredis>=2.26.3",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
python_functions = "*_test"

[tool.basedpyright]
reportAny = false
reportPrivateUsage = false
reportExplicitAny = false
